--- a/.github/workflows/testcase_ci.yml
+++ b/.github/workflows/testcase_ci.yml
@@ -25,8 +25,10 @@ jobs:
 
       - name: 🚀 Run API Tests (Pytest)
         run: |
-          pytest Py-test/
+          pytest Py-test/ --html=reports/test_report.html --self-contained-html
 
-    #   - name: 🖥️ Run UI Tests (Selenium)
-    #     run: |
-    #       pytest selenium/
+      - name: 📂 Upload Test Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: reports/test_report.html
