--- a/.github/workflows/testcase_ci.yml
+++ b/.github/workflows/testcase_ci.yml
@@ -3,8 +3,8 @@ name: TestCase Generation & Automation
 on:
   push:
     paths:
-      - "GenerateTestCase/data/test_cases.json"  # API test case changes trigger API tests
-      - "FigmaTestCase/data/test_cases.json"   # UI test case changes trigger UI tests
+      - "GenerateTestCase/data/test_cases.json"
+      - "FigmaTestCase/data/test_cases.json"
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
@@ -23,21 +23,22 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install pytest-html pytest-json-report
+          mkdir -p logs  # Ensure logs folder exists
 
       - name: 🚀 Run API Tests (Pytest)
         run: |
           if [ -f "GenerateTestCase/data/test_cases.json" ]; then
-            pytest Py-test/ --html=test_reports/api_report.html --json-report --json-report-file=test_reports/api_report.json
+            pytest Py-test/ --html=logs/api_report.html --json-report --json-report-file=logs/api_report.json | tee logs/api_test_log.txt
           else
-            echo "⚠️ No API test cases found, skipping API tests."
+            echo "⚠️ No API test cases found, skipping API tests." | tee logs/api_test_log.txt
           fi
 
       - name: 📤 Upload API Test Reports
-        if: success() || failure()  # Upload even if tests fail
+        if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: api-test-reports
-          path: test_reports/
+          path: logs/
 
   run-ui-tests:
     runs-on: ubuntu-latest
@@ -57,18 +58,48 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y chromium-chromedriver
           ln -s /usr/bin/chromedriver /usr/local/bin/chromedriver
+          mkdir -p logs  # Ensure logs folder exists
 
       - name: 🚀 Run UI Tests (Selenium)
         run: |
           if [ -f "FigmaTestCase/data/test_cases.json" ]; then
-            pytest Selenium-test/ --html=test_reports/ui_report.html --json-report --json-report-file=test_reports/ui_report.json
+            pytest Selenium-test/ --html=logs/ui_report.html --json-report --json-report-file=logs/ui_report.json | tee logs/ui_test_log.txt
           else
-            echo "⚠️ No UI test cases found, skipping UI tests."
+            echo "⚠️ No UI test cases found, skipping UI tests." | tee logs/ui_test_log.txt
           fi
 
       - name: 📤 Upload UI Test Reports
-        if: success() || failure()  # Upload even if tests fail
+        if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: ui-test-reports
-          path: test_reports/
+          path: logs/
+
+  commit-and-push-logs:
+    needs: [run-api-tests, run-ui-tests]
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📥 Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+
+      - name: ⬇️ Download Logs
+        uses: actions/download-artifact@v4
+        with:
+          name: api-test-reports
+          path: logs/
+
+      - name: ⬇️ Download UI Logs
+        uses: actions/download-artifact@v4
+        with:
+          name: ui-test-reports
+          path: logs/
+
+      - name: 🚀 Commit & Push Logs
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add logs/
+          git commit -m "📜 Updated test logs [CI/CD]"
+          git push
