Syntax Error: Randomizing generation of test cases

--- a/.github/workflows/testcase_ci.yml
+++ b/.github/workflows/testcase_ci.yml
@@ -63,7 +63,7 @@ jobs:
       - name: 🚀 Run UI Tests (Selenium)
         run: |
           if [ -f "FigmaTestCase/data/test_cases.json" ]; then
-            pytest Selenium-test/ --html=logs/ui_report.html --json-report --json-report-file=logs/ui_report.json | tee logs/ui_test_log.txt
+            pytest Selenium-test/app.py --html=logs/ui_report.html --json-report --json-report-file=logs/ui_report.json | tee logs/ui_test_log.txt
           else
             echo "⚠️ No UI test cases found, skipping UI tests." | tee logs/ui_test_log.txt
           fi
@@ -97,9 +97,11 @@ jobs:
           path: logs/
 
       - name: 🚀 Commit & Push Logs
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add logs/
-          git commit -m "📜 Updated test logs [CI/CD]"
-          git push
+          git commit -m "📜 Updated test logs [CI/CD]" || echo "No changes to commit"
+          git push https://$GH_PAT@github.com/DhyanShah22/HackNUthon-rapidops.git main
