--- a/.github/workflows/testcase_ci.yml
+++ b/.github/workflows/testcase_ci.yml
@@ -51,19 +51,22 @@ jobs:
         with:
           python-version: "3.9"
 
-      - name: 🛠️ Install Selenium & WebDriver
+      - name: 🛠️ Install Google Chrome & ChromeDriver
         run: |
-          pip install -r requirements.txt
-          pip install selenium pytest-html pytest-json-report
           sudo apt-get update
-          sudo apt-get install -y chromium-chromedriver
-          ln -s /usr/bin/chromedriver /usr/local/bin/chromedriver
+          sudo apt-get install -y google-chrome-stable
+          CHROME_VERSION=$(google-chrome --version | grep -oP '[0-9]+\.[0-9]+\.[0-9]+')
+          DRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION)
+          wget https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/bin/chromedriver
+          sudo chmod +x /usr/bin/chromedriver
           mkdir -p logs  # Ensure logs folder exists
 
       - name: 🚀 Run UI Tests (Selenium)
         run: |
           if [ -f "FigmaTestCase/data/test_cases.json" ]; then
-            pytest Selenium-test/app.py --html=logs/ui_report.html --json-report --json-report-file=logs/ui_report.json | tee logs/ui_test_log.txt
+            pytest Selenium-test/ --html=logs/ui_report.html --json-report --json-report-file=logs/ui_report.json | tee logs/ui_test_log.txt
           else
             echo "⚠️ No UI test cases found, skipping UI tests." | tee logs/ui_test_log.txt
           fi
