--- a/.github/workflows/testcase_ci.yml
+++ b/.github/workflows/testcase_ci.yml
@@ -51,6 +51,12 @@ jobs:
         with:
           python-version: "3.9"
 
+      - name: 📦 Install Dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pytest-html pytest-json-report
+          mkdir -p logs  # Ensure logs folder exists
+
       - name: 🛠️ Install Google Chrome & ChromeDriver
         uses: browser-actions/setup-chrome@v1
 
