--- a/.github/workflows/testcase_ci.yml
+++ b/.github/workflows/testcase_ci.yml
@@ -102,6 +102,6 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git add logs/
+          git add logs/*.txt
           git commit -m "📜 Updated test logs [CI/CD]" || echo "No changes to commit"
           git push https://$GH_PAT@github.com/DevMehta22/HackNUthon-rapidops.git main
