--- a/.github/workflows/testcase_ci.yml
+++ b/.github/workflows/testcase_ci.yml
@@ -51,19 +51,19 @@ jobs:
         with:
           python-version: "3.9"
 
-      - name: 📦 Install Dependencies
+      - name: 🛠️ Install Selenium & WebDriver
         run: |
           pip install -r requirements.txt
-          pip install pytest-html pytest-json-report
+          pip install selenium pytest-html pytest-json-report
+          sudo apt-get update
+          sudo apt-get install -y chromium-chromedriver
+          ln -s /usr/bin/chromedriver /usr/local/bin/chromedriver
           mkdir -p logs  # Ensure logs folder exists
-
-      - name: 🛠️ Install Google Chrome & ChromeDriver
-        uses: browser-actions/setup-chrome@v1
 
       - name: 🚀 Run UI Tests (Selenium)
         run: |
           if [ -f "FigmaTestCase/data/test_cases.json" ]; then
-            pytest Selenium-test/ --html=logs/ui_report.html --json-report --json-report-file=logs/ui_report.json | tee logs/ui_test_log.txt
+            pytest Selenium-test/app.py --html=logs/ui_report.html --json-report --json-report-file=logs/ui_report.json | tee logs/ui_test_log.txt
           else
             echo "⚠️ No UI test cases found, skipping UI tests." | tee logs/ui_test_log.txt
           fi
@@ -102,6 +102,6 @@ jobs:
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git add logs/*.txt
+          git add logs/
           git commit -m "📜 Updated test logs [CI/CD]" || echo "No changes to commit"
-          git push https://$GH_PAT@github.com/DevMehta22/HackNUthon-rapidops.git main
+          git push https://$GH_PAT@github.com/DhyanShah22/HackNUthon-rapidops.git main
